# fancy_assert

./: .gitmodules  CMakeLists.txt  README.md  build.py
examples/: CMakeLists.txt  cleanup.cpp  customized-sink.cpp  not_trigger.cpp  trigger.cpp  what.cpp
src/: CMakeLists.txt  fassert.cpp  fassert.hpp  fassert.ipp
